Add rltiles compilation and forgotten linkage with libs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ fips_begin_app(dcss windowed)
 set(ZLIB_SOURCE_ROOT ../zlib)
 add_subdirectory(${ZLIB_SOURCE_ROOT} zlib EXCLUDE_FROM_ALL)
 add_dependencies(dcss zlibstatic)
+target_link_libraries(dcss zlibstatic)
 target_include_directories(dcss PRIVATE ${ZLIB_SOURCE_ROOT} ${CMAKE_CURRENT_BINARY_DIR}/zlib NO_RECURSE)
 
 # lua
@@ -29,6 +30,7 @@ set(LUA_SOURCE_ROOT ${CRAWL_CONTRIB}/lua/src)
 file(GLOB LUA_FILES ${LUA_SOURCE_ROOT}/*.c)
 add_library(lua STATIC ${LUA_FILES})
 add_dependencies(dcss lua)
+target_link_libraries(dcss lua)
 target_include_directories(dcss PRIVATE ${LUA_SOURCE_ROOT} NO_RECURSE)
 
 # sqlite
@@ -36,9 +38,9 @@ set(SQLITE_SOURCE_ROOT ${CRAWL_CONTRIB}/sqlite)
 file(GLOB SQLITE_FILES ${SQLITE_SOURCE_ROOT}/*.c)
 add_library(sqlite STATIC ${SQLITE_FILES})
 add_dependencies(dcss sqlite)
+target_link_libraries(dcss sqlite)
 target_include_directories(dcss PRIVATE ${SQLITE_SOURCE_ROOT} NO_RECURSE)
 
-# rltiles
 set(RLTILES_SOURCE_ROOT ${CRAWL_SOURCE}/rltiles)
 target_include_directories(dcss PRIVATE ${CRAWL_SOURCE} ${RLTILES_SOURCE_ROOT} NO_RECURSE)
 target_compile_options(dcss PRIVATE -fexceptions -frtti -sUSE_SDL)
@@ -48,4 +50,5 @@ target_compile_definitions(dcss PRIVATE
     USE_TILE
     USE_TILE_LOCAL
 )
-fips_src(${CRAWL_SOURCE} ${RLTILES_SOURCE_ROOT} EXCEPT libunix.cc NO_RECURSE)
+fips_src(${CRAWL_SOURCE} EXCEPT libunix.cc NO_RECURSE)
+fips_src(${RLTILES_SOURCE_ROOT} NO_RECURSE)
