Use zlib, sqlite and freetype from ports. Feels way faster.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,18 @@ set(CMAKE_CXX_STANDARD 11)
 set(CRAWL_SOURCE crawl/crawl-ref/source)
 set(CRAWL_CONTRIB ${CRAWL_SOURCE}/contrib)
 set(BUILD_SHARED_LIBS false)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -s USE_WEBGL2=1 -s USE_GLFW=3 --use-port=freetype")
-set(SDL2_LIBRARIES "-sUSE_SDL=2")
-set(SDL2_IMAGE_LIBRARIES "-sUSE_SDL_IMAGE=2")
-set(DISABLE_EXCEPTION_CATCHING 0)
+set(CMAKE_CXX_FLAGS "       \
+    ${CMAKE_CXX_FLAGS}      \
+    -fexceptions            \
+    -frtti                  \
+    -sMAX_WEBGL_VERSION=2   \
+    -sUSE_GLFW=3            \
+    --use-port=freetype     \
+    --use-port=sdl2         \
+    --use-port=sdl2_image   \
+    --use-port=sqlite3      \
+    --use-port=zlib"
+)
 
 # include the fips main cmake file
 get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
@@ -22,13 +30,6 @@ fips_setup()
 add_compile_options(-w)
 fips_begin_app(dcss windowed)
 
-# zlib
-set(ZLIB_SOURCE_ROOT ../zlib)
-add_subdirectory(${ZLIB_SOURCE_ROOT} zlib EXCLUDE_FROM_ALL)
-add_dependencies(dcss zlibstatic)
-target_link_libraries(dcss zlibstatic)
-target_include_directories(dcss PRIVATE ${ZLIB_SOURCE_ROOT} ${CMAKE_CURRENT_BINARY_DIR}/zlib NO_RECURSE)
-
 # lua
 set(LUA_SOURCE_ROOT ${CRAWL_CONTRIB}/lua/src)
 file(GLOB LUA_FILES ${LUA_SOURCE_ROOT}/*.c)
@@ -37,17 +38,11 @@ add_dependencies(dcss lua)
 target_link_libraries(dcss lua)
 target_include_directories(dcss PRIVATE ${LUA_SOURCE_ROOT} NO_RECURSE)
 
-# sqlite
-set(SQLITE_SOURCE_ROOT ${CRAWL_CONTRIB}/sqlite)
-file(GLOB SQLITE_FILES ${SQLITE_SOURCE_ROOT}/*.c)
-add_library(sqlite STATIC ${SQLITE_FILES})
-add_dependencies(dcss sqlite)
-target_link_libraries(dcss sqlite)
-target_include_directories(dcss PRIVATE ${SQLITE_SOURCE_ROOT} NO_RECURSE)
-
 set(RLTILES_SOURCE_ROOT ${CRAWL_SOURCE}/rltiles)
 target_include_directories(dcss PRIVATE ${CRAWL_SOURCE} ${RLTILES_SOURCE_ROOT} NO_RECURSE)
-target_compile_options(dcss PRIVATE -fexceptions -frtti -sUSE_SDL=2 -sUSE_SDL_IMAGE=2)
+target_link_options(dcss PRIVATE
+    -O2 # this is needed because using asyncify with lesser optimizations causes crashes at runtime, see https://github.com/emscripten-core/emscripten/issues/19346
+)
 target_compile_definitions(dcss PRIVATE
     ASSERTS
     CLUA_BINDINGS
@@ -66,20 +61,40 @@ fips_src(${CRAWL_SOURCE} EXCEPT libunix.cc NO_RECURSE)
 fips_src(${RLTILES_SOURCE_ROOT} NO_RECURSE)
 fips_src(${CRAWL_SOURCE}/prebuilt NO_RECURSE)
 
-install(DIRECTORY ${CRAWL_SOURCE}/dat/ DESTINATION dat/)
-install(DIRECTORY ${CRAWL_SOURCE}/../docs/ DESTINATION docs/)
-install(DIRECTORY ${CRAWL_SOURCE}/../settings/ DESTINATION settings/)
-install(DIRECTORY ${CRAWL_CONTRIB}/fonts/ DESTINATION fonts/)
+file(COPY ${CRAWL_SOURCE}/dat/ DESTINATION dat/)
+file(COPY ${CRAWL_SOURCE}/../docs/ DESTINATION docs/)
+file(COPY ${CRAWL_SOURCE}/../settings/ DESTINATION settings/)
+file(COPY ${CRAWL_CONTRIB}/fonts/ DESTINATION fonts/)
 
 target_link_libraries(dcss
-    ${SDL2_LIBRARIES}
-    ${SDL2_IMAGE_LIBRARIES}
-    "-s LEGACY_GL_EMULATION=1 -sFILESYSTEM -sGL_UNSAFE_OPTS=0 -sSDL2_IMAGE_FORMATS='[\"png\"]'"
+    -sLEGACY_GL_EMULATION=1  # FIXME
+    -sFILESYSTEM
+    -sGL_UNSAFE_OPTS=0
+    -sSDL2_IMAGE_FORMATS='["png"]'
+
     "--preload-file dat"
     "--preload-file docs"
     "--preload-file settings"
     "--preload-file fonts"
+
+    -sASYNCIFY
+    -sASYNCIFY_STACK_SIZE=16777216  # 16 Mb
 )
-if (CMAKE_BUILD_TYPE EQUAL "Debug")
-    target_link_libraries(dcss "-g")
+
+message("Build type: ${CMAKE_BUILD_TYPE}")
+if(CMAKE_BUILD_TYPE STREQUAL Debug)
+    target_compile_options(dcss PRIVATE
+        -g3
+    )
+    target_link_options(dcss PRIVATE
+        -gsource-map
+        -sDISABLE_EXCEPTION_CATCHING=0
+    )
+else()
+    target_compile_options(dcss PRIVATE
+        -g0
+    )
+    target_link_options(dcss PRIVATE
+        -g0
+)
 endif()
